fix nextPrevArrows Buttons height on mobile screen

--- a/style.css
+++ b/style.css
@@ -1088,6 +1088,7 @@ hr {
   }
 }
 
+/* Mobile size screen */
 @media screen and (max-width: 678px) {
   .portfolioImage {
     max-width: 100px;
@@ -1128,6 +1129,10 @@ hr {
     font-size: 50px;
   }
 
+  .thumbnail {
+    margin-bottom: 10em;
+  }
+
   .thumbnail .item img {
     width: 100%;
     height: 100%;
@@ -1147,7 +1152,8 @@ hr {
 
   .nextPrevArrows {
     margin-right: 3rem;
-    border-color: red;
+    top: 72%;
+    
   }
 
   .form-control,
